# waybar_mediaplayer

./: README.md  main.c  media_controller.c  media_controller.h  media_player.c  media_player.h  meson.build  mpris_media_manager.c  mpris_media_manager.h  mpris_media_player.c  mpris_media_player.h  waybar_mediaplayer.h
